--- Wednesday 2012-06-27 ---
* Added inner sector coordinates to the coordinate functions
* Added new dirtyness functions, seems to be working.
* Added some extra debug functions, added sector dirtyness and cleaned it up a
  bit.
* Started a whole new mess by redesigning drawTile and drawTileSpecific
* Map-animations work again. Tiles that shouldn't be drawn aren't.
* Sectors are now correctly drawn when moving, resulting in smooth motion.
* Started moving the drawAnimation function over to the new design

--- Tuesday 2012-06-26 ---
* The map is now rendered in the correct place, sectors work perfectly.
* Added some debug functions for displaying sectors in the debug canvas.
* Fixed autotiles.

--- Monday 2012-06-25 ---
* Mergin the old sector changes with the new ones in the sector branch

--- Monday 2011-12-05 ---
* A few modest changes. 

--- Sunday 2011-12-04 ---
* Objects are now drawn on a per-position basis. For every position we see if
  there is an object there and draw it BEFORE we draw anything else on that
  layer. Is probably a bit more resource intensive, would have to see what
  impact it has when lots of objects are on the map.

--- Saturday 2011-12-03 ---
* New cache layer is so complex it would take days to implement. We'll leave it
  as it is for the moment.
* You no longer have to (or can) supply the tilenumber for an animation's
  "nextframe", in stead you have to supply how much tiles further the next
  frame tile is. Makes it much easier.
* The drawing of animated tiles has been fixed.
* Fixed the moving sprites of an object, but still need to finetune the code.
* Setting walkable tiles in tiled happens with the "walkable" property in stead
  of the old "impenetrable" one. When set to 2 it means it's half-walkable.
  You can enter it from top to bottom on the y axis, or any way on the x axis,
  but only exit the same way out (so no top to bottom exit).
  This is nice for fences.