@@ -1,3 +1,15 @@
+--- Friday 2012-06-29 ---
+* Modified the drawGrid debug function, the sector lines are now drawn
+  correctly and move along with the map.
+* Because of the improved drawGrid function, some other hardcoded debug
+  code may be removed.
+* Plain shadows are drawn again.
+* New debug log function, some fixes here and there
+
+--- Thursday 2012-06-28 ---
+* Sectors are now correctly drawn when moving, resulting in smooth motion.
+* Started moving the drawAnimation function over to the new design
+
 --- Wednesday 2012-06-27 ---
 * Added inner sector coordinates to the coordinate functions
 * Added new dirtyness functions, seems to be working.
@@ -5,8 +17,6 @@
   bit.
 * Started a whole new mess by redesigning drawTile and drawTileSpecific
 * Map-animations work again. Tiles that shouldn't be drawn aren't.
-* Sectors are now correctly drawn when moving, resulting in smooth motion.
-* Started moving the drawAnimation function over to the new design
 
 --- Tuesday 2012-06-26 ---
 * The map is now rendered in the correct place, sectors work perfectly.
